k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learnlab
  labels:
    app: learnlab
