k8s/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: learnlab
  labels:
    app: mongo
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
