k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: learnlab
  labels:
    app: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
